--- a/4-Agenda/res/values/strings.xml
+++ b/4-Agenda/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">4-Agenda</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="text_hint">Insertar nombre y telefono en fichero</string>
+    <string name="btn">Insertar</string>
 
 </resources>
